<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <include
            android:id="@+id/loadingView"
            layout="@layout/view_loading"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/submissionHeaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/submissionNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/submissionHeaderTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ellipsize="end"
                android:textColor="@color/darkGray"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submissionNameTv" />

            <TextView
                android:id="@+id/submissionDescriptionTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ellipsize="end"
                android:textColor="@color/darkGray"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submissionHeaderTv" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/submittedLinksLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/submitted_links"
            android:textColor="@color/darkGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submissionHeaderContainer" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/submittedLinksContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/lightGray"
            android:orientation="vertical"
            android:paddingBottom="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submittedLinksLabel">

            <TextView
                android:id="@+id/submittedLinksEmptyView"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@android:color/white"
                android:paddingLeft="20dp"
                android:text="@string/submitted_links_empty"
                android:textColor="@color/silver"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/commentsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/comments"
            android:textColor="@color/darkGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submittedLinksContainer" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/commentsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingBottom="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentsLabel">

            <TextView
                android:id="@+id/commentsEmptyView"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@android:color/white"
                android:paddingLeft="20dp"
                android:text="@string/comments_empty"
                android:textColor="@color/silver"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>